<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ua.findvacancies</groupId>
    <artifactId>findvacancies-service</artifactId>
    <version>2.1</version>
    <packaging>pom</packaging>
    <name>Vacancies search application</name>
    <description>Application for parsing data from sites with vacancies</description>

    <modules>
        <module>findvacancies</module>
        <module>findvacancies-web-jsp</module>
        <module>findvacancies-web-vaadin</module>
    </modules>

    <properties>
        <!-- Generic properties -->
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <spring-boot.version>2.7.11</spring-boot.version>

        <!-- Test -->
        <junit-platform.version>1.8.2</junit-platform.version>
        <junit-jupiter.version>5.8.2</junit-jupiter.version>

        <mockito-core.version>4.10.0</mockito-core.version>
        <!-- /Test -->

        <lombok.version>1.18.24</lombok.version>
        <!--<hibernate-validator.version>6.1.6.Final</hibernate-validator.version>-->
        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>

        <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>

        <!-- Excel -->
        <poi-ooxml.version>5.2.2</poi-ooxml.version>

    </properties>
    <dependencyManagement>
        <dependencies>
            <!-- Current project -->
            <dependency>
                <groupId>ua.findvacancies</groupId>
                <artifactId>findvacancies</artifactId>
                <version>2.1</version>
            </dependency>
            <!--<dependency>
                <groupId>ua.findvacancies</groupId>
                <artifactId>findvacancies-web-jsp</artifactId>
            </dependency>-->
            <!-- /Current project -->

            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-tomcat</artifactId>
                <version>${spring-boot.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Hot deploy and live reload -->
            <!-- https://vaadin.com/docs/latest/configuration/live-reload/spring-boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-devtools</artifactId>
                <version>${spring-boot.version}</version>
                <!--<optional>true</optional>-->
            </dependency>
            <!-- -->

            <!-- /Spring Boot -->

            <!-- Tests -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.platform</groupId>
                <artifactId>junit-platform-commons</artifactId>
                <version>${junit-platform.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- /Tests -->

            <!-- General -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- /General -->

            <!-- Validation -->
            <dependency>
                <groupId>org.hibernate.validator</groupId>
                <artifactId>hibernate-validator</artifactId>
                <version>${hibernate-validator.version}</version>
            </dependency>
            <!-- /Validation -->

            <!--  XML  -->
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jakarta.xml.bind-api.version}</version>
                <scope>compile</scope>
            </dependency>
            <!--  /XML  -->

            <!-- Excel -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi-ooxml.version}</version>
            </dependency>
            <!-- /Excel -->

            <!-- Plugins -->
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>4.0.0-M4</version>
            </dependency>
            <!-- /Plugins -->

        </dependencies>
    </dependencyManagement>
    <build>
        <finalName>FindVacancies</finalName>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>


        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.0.0</version>
                <!--<configuration>
                    <mainClass>ua.findvacancies.Application</mainClass>
                </configuration>-->
            </plugin>

            <!-- https://devcenter.heroku.com/articles/java-webapp-runner#create-a-procfile -->
            <!-- heroku -->
            <!--<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.github.jsimone</groupId>
                                    <artifactId>webapp-runner</artifactId>
                                    <version>9.0.11.0</version>
                                    <destFileName>webapp-runner.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->

        </plugins>
    </build>

</project>